# MiniTask

./: .gitignore  CHANGELOG.md  LICENSE  MiniTask.cabal  cabal.project.local  fourmolu.yaml
app/: Main.hs
src/Api/: Apis.hs
src/Db/: Pgsql.hs
