cabal-version:      3.4
name:               MiniTask
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             PhilG112
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:

common common-options
    build-depends: base ^>=4.20.0.0
        , servant
        , aeson
        , text
        , bytestring
    ghc-options:
        -Wall -Wcompat -Widentities -Wincomplete-uni-patterns
        -Wincomplete-record-updates
    default-extensions:
        NamedFieldPuns
        OverloadedStrings
        DeriveGeneric
        RecordWildCards
    default-language: Haskell2010

executable MiniTask
    import:           common-options
    main-is:          Main.hs
    build-depends:    MiniTask
        , warp
        , servant-server
        , wai

    hs-source-dirs:   app

library
    import: common-options
    exposed-modules: Api.Apis, Db.Pgsql
    hs-source-dirs: src
    build-depends:    servant-auth-server 
                    , bcrypt
                    , postgresql-simple
                    , async

test-suite test
    import: common-options
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    hs-source-dirs: tests
    build-depends: hspec
                , hspec-discover
                , MiniTask
    build-tool-depends: hspec-discover:hspec-discover